--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,16 @@ set(CMAKE_CXX_STANDARD 11)
 
 if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
-	set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g")
+	set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -DDEBUG")
 endif()
 
 find_package(SDL2 REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
+find_package(Boost COMPONENTS system filesystem REQUIRED)
 
 include_directories(${SDL2_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
+include_directories(${Boost_INCLUDE_DIRS})
 
 set(DEPEND_LIB_ROOT ${CMAKE_CURRENT_BINARY_DIR}/lib)
 
@@ -35,8 +37,13 @@ add_executable(rise_and_fall
 		src/rise_and_fall.cpp
 		src/MainWindow.cpp
 		src/Scene.cpp
+		src/RF_Config.cpp
 	)
 
-target_link_libraries(rise_and_fall PUBLIC SDL_GL_Window ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES})
+target_link_libraries( rise_and_fall PUBLIC
+		SDL_GL_Window ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES}
+		SDL_ttf
+		${Boost_FILESYSTEM_LIBRARIES} ${Boost_SYSTEM_LIBRARIES}
+	)
 
 install(TARGETS rise_and_fall RUNTIME DESTINATION rise_and_fall)
