Change default install-prefix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,14 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
   set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
 endif()
 
+if(NOT DEFINED CMAKE_INSTALL_PREFIX)
+	if(CMAKE_BUILD_TYPE MATCHES Debug)
+		set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/debug")
+	else()
+		set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/release")
+	endif()
+endif()
+
 find_package(SDL2 REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
